Tue Aug 17 16:55:16 CEST 2004 Daniel Veillard <veillard@redhat.com

	* gam_tree.c: cleanup while chasing regression in make tests

Thu Aug 12 19:44:02 EDT 2004 Daniel Veillard <veillard@redhat.com>

	* tests/Makefile.am: use $GAMIN_DEBUG_SERVER so that regression
	  tests can be run in a clean environment.

Thu Aug 12 13:42:22 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/Makefile.am: fix build on x86_64. Auto* is excessively
	  arcane and buggy, end-up copying the files on the libgamin dir.
	* server/gam_connection.c server/gam_poll.c server/gam_subscription.c
	  server/gam_subscription.h tests/testing.c: more testing more debug
	  messages.

Wed Aug 11 13:18:04 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in lib/Makefile.am libgamin/Makefile.am libgamin/gam_fork.c
	  server/Makefile.am server/gam_dnotify.c server/gam_inotify.c 
	  server/gam_node.c server/gam_node.hserver/gam_poll.c server/gam_tree.c
	  server/gam_server.c: cleanup patch from John McCutchan removing
	  comented out thread code, modularization of makefiles, and
	  use of $GAMIN_DEBUG_SERVER for debug or test when the client forks
	  a new server.

Tue Aug 10 10:56:49 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* Makefile.am TODO configure.in libgamin/Makefile.am libgamin/TODO
	  server/Makefile.am lib/*: applied cleanup patch from John McCutchan
	  then rebuilt the lib/ subdir providing shared code between the
	  client lib and the server (gam_error and gam_event).
	* server/gam_inotify.c: update as part of John McCutchan patch.

Fri Aug  6 17:09:53 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in: to not link with glib threads, not needed anymore
	* libgamin/gam_api.c: fixed timeouts values
	* tests/Makefile.am tests/testing.c tests/result/4 tests/scenario/4.tst:
	  adding more tests, especially transparent restart when the server
	  is killed.

Fri Aug  6 14:29:47 CEST 2004 Daniel Veillard <veillard@redhat.com>
